2008-11-24  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/decoration/ccm-decoration.c (ccm_decoration_init),
	(ccm_decoration_finalize), (ccm_decoration_class_init),
	(ccm_decoration_get_opacity), (ccm_decoration_on_option_changed),
	(ccm_decoration_on_property_changed),
	(ccm_decoration_on_opacity_changed),
	(ccm_decoration_window_load_options), (ccm_decoration_create_mask),
	(ccm_decoration_window_query_geometry),
	(ccm_decoration_window_set_opaque_region),
	(ccm_decoration_window_move), (ccm_decoration_window_resize),
	(ccm_decoration_window_iface_init):
	* plugins/decoration/ccm-decoration.h:
	* plugins/decoration/ccm-decoration.plugin.desktop.in:
	* plugins/decoration/ccm-decoration.schemas.in:
	  - Add translucent decoration plugin.

2008-11-21  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* src/ccm-screen.c (ccm_screen_update_refresh_rate):
	  - Don't try to set refresh rate if we have an error on get conf key, 
	    avoid a crash on first startup.       

2008-11-21  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/shadow/ccm-shadow.c (ccm_shadow_window_load_options),
	(ccm_shadow_window_map):
      - Check for _CCM_SHADOW_DISABLED property on window map.

2008-11-19  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/shadow/ccm-shadow.c (ccm_shadow_init),
	(ccm_shadow_class_init), (ccm_shadow_check_needed),
	(ccm_shadow_need_shadow), (ccm_shadow_query_avoid_shadow),
	(ccm_shadow_create_atoms), (ccm_shadow_on_event),
	(ccm_shadow_screen_load_options), (ccm_shadow_window_load_options),
	(ccm_shadow_window_query_geometry), (ccm_shadow_window_map),
	(ccm_shadow_window_paint), (ccm_shadow_window_move),
	(ccm_shadow_window_resize), (ccm_shadow_window_set_opaque_region),
	(ccm_shadow_window_get_origin), (ccm_shadow_window_iface_init),
	(ccm_shadow_screen_iface_init):
	* plugins/shadow/ccm-shadow.h:
      - Add atom _CCM_SHADOW_DISABLE to disable per window
	* src/ccm-window.c (ccm_window_get_child_utf8_property),